adding changes to the wrangle file

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "260707cb",
+   "id": "e1d30a25",
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "da0e793d",
+   "id": "1ad551be",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a5c52c75",
+   "id": "11f82c58",
    "metadata": {
     "scrolled": false
    },
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "101c13db",
+   "id": "98da0769",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6f6ffb7b",
+   "id": "6d3bfbb3",
    "metadata": {
     "scrolled": false
    },
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "571ffbef",
+   "id": "0233a879",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "bdb2efb9",
+   "id": "664f1c04",
    "metadata": {
     "scrolled": false
    },
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "97b61c45",
+   "id": "344a88ac",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "fef0815b",
+   "id": "e95fe117",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "9bef867d",
+   "id": "55245585",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "7a336d64",
+   "id": "698fb35b",
    "metadata": {
     "scrolled": false
    },
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "452a9c9e",
+   "id": "f58f1384",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4995e640",
+   "id": "14f1a10d",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "06527259",
+   "id": "f01a3c62",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0fa85e27",
+   "id": "196a702f",
    "metadata": {
     "collapsed": true
    },
@@ -2080,17 +2080,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 140,
    "id": "b772488b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9997132808318678"
+       "0.9997705150025817"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2103,17 +2103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 144,
    "id": "dd5dd06c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9995221347197798"
+       "0.9986804612648448"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2121,7 @@
    "source": [
     "# The proportion of houses that have 8 bathrooms and less\n",
     "\n",
-    "houses[houses.bathrooms <= 8].shape[0] / houses.shape[0]"
+    "houses[houses.bathrooms <= 7].shape[0] / houses.shape[0]"
    ]
   },
   {
@@ -2200,12 +2200,12 @@
    "source": [
     "## Takeaways\n",
     "- The proportion obtained are still significant and won't denature the data\n",
-    "- I will filter the data through 8 bedrooms criterion its most restrictive one "
+    "- I will filter the data through 7 bathrooms criterion, its most restrictive one "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 145,
    "id": "636b9c1f",
    "metadata": {
     "scrolled": false
@@ -2366,7 +2366,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>52291 rows × 8 columns</p>\n",
+       "<p>52222 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2396,10 +2396,10 @@
        "52440  6037  2017-09-25  \n",
        "52441  6037  2018-05-25  \n",
        "\n",
-       "[52291 rows x 8 columns]"
+       "[52222 rows x 8 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2407,7 +2407,7 @@
    "source": [
     "# Filtering the data through number of bedrooms\n",
     "\n",
-    "houses = houses[houses.bathrooms <= 8]\n",
+    "houses = houses[houses.bathrooms <= 7]\n",
     "houses"
    ]
   },
@@ -2420,6 +2420,62 @@
    "source": [
     "# Compiling the code for preparing my data\n",
     "\n",
+    "def get_connection(db, user=user, host=host, password=password):\n",
+    "    '''\n",
+    "    get_connection uses login info from env.py file to access Codeup db.\n",
+    "    It takes in a string name of a database as an argument.\n",
+    "    '''\n",
+    "    return f'mysql+pymysql://{user}:{password}@{host}/{db}'\n",
+    "\n",
+    "\n",
+    "def get_zillow_data():\n",
+    "    '''\n",
+    "    zillow_data() gets the zillow (only properties_2017 table) data from Codeup db, then writes it to a csv file,\n",
+    "    and returns the df.\n",
+    "    '''\n",
+    "    # Creating a SQL query\n",
+    "    sql_query = '''\n",
+    "                SELECT \n",
+    "                       bedroomcnt,\n",
+    "                       bathroomcnt,\n",
+    "                       calculatedfinishedsquarefeet,\n",
+    "                       taxvaluedollarcnt,\n",
+    "                       yearbuilt,\n",
+    "                       taxamount,\n",
+    "                       fips,\n",
+    "                       propertylandusetypeid,\n",
+    "                       transactiondate\n",
+    "                FROM properties_2017\n",
+    "                JOIN predictions_2017 USING(parcelid)\n",
+    "                JOIN propertylandusetype USING(propertylandusetypeid)\n",
+    "                WHERE propertylandusetypeid = '261'\n",
+    "                '''\n",
+    "    \n",
+    "    # Reading in the DataFrame from Codeup db.\n",
+    "    properties_2017 = pd.read_sql(sql_query, get_connection('zillow'))\n",
+    "    return properties_2017\n",
+    "\n",
+    "def get_local_zillow():\n",
+    "    '''\n",
+    "    get_local_zillow reads in telco data from Codeup database, writes data to\n",
+    "    a csv file if a local file does not exist, and returns a df.\n",
+    "    '''\n",
+    "    if os.path.isfile('properties_2017.csv'):\n",
+    "        \n",
+    "        # If csv file exists read in data from csv file.\n",
+    "        properties_2017 = pd.read_csv('properties_2017.csv', index_col=0)\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        # Read fresh data from db into a DataFrame\n",
+    "        properties_2017 = get_zillow_data()\n",
+    "        \n",
+    "        # Cache data\n",
+    "        properties_2017.to_csv('properties_2017.csv')\n",
+    "        \n",
+    "    return properties_2017\n",
+    "\n",
+    "\n",
     "# Dropping null values\n",
     "houses = properties_2017.dropna(axis = 0, how ='any')\n",
     "\n",
@@ -2428,22 +2484,26 @@
     "\n",
     "# Renaming columns\n",
     "cols_to_rename = {\n",
-    "    'calculatedfinishedsquarefeet': 'indoor_squarefeet',\n",
-    "    'taxvaluedollarcnt': 'taxvalue',\n",
+    "    'calculatedfinishedsquarefeet': 'indoor_sqft',\n",
+    "    'taxvaluedollarcnt': 'tax_value',\n",
+    "    'transactiondate': 'sale_date',\n",
+    "    'bedroomcnt': 'bedrooms',\n",
+    "    'bathroomcnt': 'bathrooms',\n",
+    "    'taxamount': 'tax_amount',\n",
     "}\n",
     "\n",
     "houses = houses.rename(columns=cols_to_rename)\n",
     "\n",
     "# Converting the following columns to int\n",
-    "houses[\"bedroomcnt\"] = houses[\"bedroomcnt\"].astype(int)\n",
-    "houses[\"indoor_squarefeet\"] = houses[\"indoor_squarefeet\"].astype(int)\n",
-    "houses[\"taxvalue\"] = houses[\"taxvalue\"].astype(int)\n",
-    "houses[\"yearbuilt\"] = houses[\"yearbuilt\"].astype(int)\n",
-    "houses[\"fips\"] = houses[\"fips\"].astype(int)\n",
+    "houses['bedrooms'] = houses['bedrooms'].astype(int)\n",
+    "houses['indoor_sqft'] = houses['indoor_sqft'].astype(int)\n",
+    "houses['tax_value'] = houses['tax_value'].astype(int)\n",
+    "houses['yearbuilt'] = houses['yearbuilt'].astype(int)\n",
+    "houses['fips'] = houses['fips'].astype(int)\n",
+    "\n",
     "\n",
     "# Filtering the data through number of bedrooms\n",
-    "houses = houses[houses.bedroomcnt <= 8]\n",
-    "houses"
+    "houses = houses[houses.bathrooms <= 7]"
    ]
   }
  ],
