adding changes to the wrangle files, and scaling_exercises file

--- a/scaling_exercises.ipynb
+++ b/scaling_exercises.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a305f52e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "55c0ea98",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "927a2251",
    "metadata": {
     "scrolled": true
@@ -71,14 +71,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bedroomcnt</th>\n",
-       "      <th>bathroomcnt</th>\n",
-       "      <th>indoor_squarefeet</th>\n",
-       "      <th>taxvalue</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>indoor_sqft</th>\n",
+       "      <th>tax_value</th>\n",
        "      <th>yearbuilt</th>\n",
-       "      <th>taxamount</th>\n",
+       "      <th>tax_amount</th>\n",
        "      <th>fips</th>\n",
-       "      <th>transactiondate</th>\n",
+       "      <th>sale_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -142,22 +142,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  taxamount  \\\n",
-       "0           4          3.5               3100   1023282       1998   11013.72   \n",
-       "1           2          1.0               1465    464000       1967    5672.48   \n",
-       "2           3          2.0               1243    564778       1962    6488.30   \n",
-       "3           4          3.0               2376    145143       1970    1777.51   \n",
-       "4           4          3.0               2962    773303       1950    9516.26   \n",
+       "   bedrooms  bathrooms  indoor_sqft  tax_value  yearbuilt  tax_amount  fips  \\\n",
+       "0         4        3.5         3100    1023282       1998    11013.72  6059   \n",
+       "1         2        1.0         1465     464000       1967     5672.48  6111   \n",
+       "2         3        2.0         1243     564778       1962     6488.30  6059   \n",
+       "3         4        3.0         2376     145143       1970     1777.51  6037   \n",
+       "4         4        3.0         2962     773303       1950     9516.26  6037   \n",
        "\n",
-       "   fips transactiondate  \n",
-       "0  6059      2017-01-01  \n",
-       "1  6111      2017-01-01  \n",
-       "2  6059      2017-01-01  \n",
-       "3  6037      2017-01-01  \n",
-       "4  6037      2017-01-01  "
+       "    sale_date  \n",
+       "0  2017-01-01  \n",
+       "1  2017-01-01  \n",
+       "2  2017-01-01  \n",
+       "3  2017-01-01  \n",
+       "4  2017-01-01  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b82d351c",
+   "execution_count": 4,
+   "id": "1cf253c3",
    "metadata": {},
    "outputs": [
     {
@@ -177,18 +177,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 52301 entries, 0 to 52441\n",
+      "Int64Index: 52222 entries, 0 to 52441\n",
       "Data columns (total 8 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   bedroomcnt         52301 non-null  int64  \n",
-      " 1   bathroomcnt        52301 non-null  float64\n",
-      " 2   indoor_squarefeet  52301 non-null  int64  \n",
-      " 3   taxvalue           52301 non-null  int64  \n",
-      " 4   yearbuilt          52301 non-null  int64  \n",
-      " 5   taxamount          52301 non-null  float64\n",
-      " 6   fips               52301 non-null  int64  \n",
-      " 7   transactiondate    52301 non-null  object \n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   bedrooms     52222 non-null  int64  \n",
+      " 1   bathrooms    52222 non-null  float64\n",
+      " 2   indoor_sqft  52222 non-null  int64  \n",
+      " 3   tax_value    52222 non-null  int64  \n",
+      " 4   yearbuilt    52222 non-null  int64  \n",
+      " 5   tax_amount   52222 non-null  float64\n",
+      " 6   fips         52222 non-null  int64  \n",
+      " 7   sale_date    52222 non-null  object \n",
       "dtypes: float64(2), int64(5), object(1)\n",
       "memory usage: 3.6+ MB\n"
      ]
@@ -200,24 +200,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "bd6e3f70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3f813c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "715ce258",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f30fff8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e1021a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d47c2d30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2f6caafa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_validate_test_split(houses, seed=175):\n",
-    "    '''\n",
-    "    This function takes in a dataframe (DF) and an integer for setting a seed\n",
-    "    and splits the data into train, validate and test. \n",
-    "    Test is 20% of the original dataset, validate is .30*.80= 24% of the \n",
-    "    original dataset, and train is .70*.80= 56% of the original dataset. \n",
-    "    The function returns train, validate and test DF. \n",
-    "    '''\n",
-    "    train_validate, test = train_test_split(houses, test_size=0.2, \n",
-    "                                            random_state=seed)\n",
-    "    train, validate = train_test_split(train_validate, test_size=0.3, \n",
-    "                                       random_state=seed)\n",
-    "    return train, validate, test\n"
+    "scaled_train_validate, scaled_test = train_test_split(houses, scaled_test_size=0.2, \n",
+    "                                        random_state=seed)\n",
+    "scaled_train, scaled_validate = train_test_split(scaled_train_validate, scaled_test_size=0.3, \n",
+    "                                   random_state=seed)"
    ]
   },
   {
@@ -408,7 +447,7 @@
     }
    ],
    "source": [
-    "train, validate, test = train_validate_test_split(houses)\n",
+    "scaled_train, scaled_validate, scaled_test = train_validate_test_split(houses)\n",
     "train"
    ]
   },
