--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "e1d30a25",
+   "id": "fd4dfee1",
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1ad551be",
+   "id": "684c8b3e",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "11f82c58",
+   "id": "ee45b028",
    "metadata": {
     "scrolled": false
    },
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "98da0769",
+   "id": "c3cd15aa",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6d3bfbb3",
+   "id": "2a1b1e5a",
    "metadata": {
     "scrolled": false
    },
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "0233a879",
+   "id": "35496807",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "664f1c04",
+   "id": "f82bb442",
    "metadata": {
     "scrolled": false
    },
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "344a88ac",
+   "id": "4cf495b4",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "e95fe117",
+   "id": "6f8ea1b0",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "55245585",
+   "id": "805f42fd",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "698fb35b",
+   "id": "d996aacd",
    "metadata": {
     "scrolled": false
    },
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "f58f1384",
+   "id": "f3ca8e35",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "14f1a10d",
+   "id": "c56dd21c",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "f01a3c62",
+   "id": "7ff0b895",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "196a702f",
+   "id": "e788d740",
    "metadata": {
     "collapsed": true
    },
@@ -2418,7 +2418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compiling the code for preparing my data\n",
+    "# Compiling the code for wrangling data\n",
     "\n",
     "def get_connection(db, user=user, host=host, password=password):\n",
     "    '''\n",
