adding changes to the wrangle files, and scaling_exercises file

--- a/regression_doodling.ipynb
+++ b/regression_doodling.ipynb
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c4c316df",
+   "id": "d39cab94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0e206925",
+   "id": "9a06571b",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4d2548b7",
+   "id": "3eb279f7",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9b784eb4",
+   "id": "aeeda73f",
    "metadata": {},
    "outputs": [
     {
@@ -338,8 +338,10 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "14d9c22c",
-   "metadata": {},
+   "id": "4a042450",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -364,6 +366,173 @@
    "source": [
     "titles['to_date'] = titles['to_date'].astype(int)\n",
     "titles.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "16822ab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1980-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980-01-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1981-01-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1991-02-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1991-03-23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            A\n",
+       "0  1980-01-01\n",
+       "1  1980-02-02\n",
+       "2  1980-03-02\n",
+       "3  1980-01-21\n",
+       "4  1981-01-21\n",
+       "5  1991-02-21\n",
+       "6  1991-03-23"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "        'A':\n",
+    "            ['1980-01-01', '1980-02-02', '1980-03-02', '1980-01-21',\n",
+    "             '1981-01-21', '1991-02-21', '1991-03-23'] })\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "35aa265c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1980-01-01\n",
+       "1    1980-02-02\n",
+       "2    1980-03-02\n",
+       "3    1980-01-21\n",
+       "4    1981-01-21\n",
+       "5    1991-02-21\n",
+       "6    1991-03-23\n",
+       "Name: A, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "533bcb01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/5k/zptdym41293159jft7y2b6cm0000gp/T/ipykernel_67830/2946663298.py:1: FutureWarning: casting datetime64[ns] values to int64 with .astype(...) is deprecated and will raise in a future version. Use .view(...) instead.\n",
+      "  df['A'] = pd.to_datetime(df['A']).astype('int64')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    315532800000000000\n",
+       "1    318297600000000000\n",
+       "2    320803200000000000\n",
+       "3    317260800000000000\n",
+       "4    348883200000000000\n",
+       "5    667094400000000000\n",
+       "6    669686400000000000\n",
+       "Name: A, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['A'] = pd.to_datetime(df['A']).astype('int64')\n",
+    "df['A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c44098b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['A'] = pd.to_datetime(df['A']).astype('int64')\n",
+    "max_a = df.A.max()\n",
+    "min_a = df.A.min()\n",
+    "min_norm = -1\n",
+    "max_norm =1\n",
+    "df['NORMA'] = (df.A- min_a) *(max_norm - min_norm) / (max_a-min_a) + min_norm"
    ]
   }
  ],
