--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "fd4dfee1",
+   "id": "5feec01a",
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "684c8b3e",
+   "id": "e3cfcd22",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ee45b028",
+   "id": "7affeea4",
    "metadata": {
     "scrolled": false
    },
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c3cd15aa",
+   "id": "fc8ad82a",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2a1b1e5a",
+   "id": "bf21ee61",
    "metadata": {
     "scrolled": false
    },
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "35496807",
+   "id": "cdaa1c96",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "f82bb442",
+   "id": "07fc1532",
    "metadata": {
     "scrolled": false
    },
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "4cf495b4",
+   "id": "f88f87c6",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "6f8ea1b0",
+   "id": "ac36342e",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "805f42fd",
+   "id": "aaa12de8",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "d996aacd",
+   "id": "c5593c41",
    "metadata": {
     "scrolled": false
    },
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "f3ca8e35",
+   "id": "68ac910f",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "c56dd21c",
+   "id": "3d75b5ff",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "7ff0b895",
+   "id": "6630074f",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e788d740",
+   "id": "cf610b65",
    "metadata": {
     "collapsed": true
    },
@@ -2413,6 +2413,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 146,
+   "id": "8314c1e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2017-01-01\n",
+       "1        2017-01-01\n",
+       "2        2017-01-01\n",
+       "3        2017-01-01\n",
+       "4        2017-01-01\n",
+       "            ...    \n",
+       "52437    2017-09-20\n",
+       "52438    2017-09-21\n",
+       "52439    2017-09-21\n",
+       "52440    2017-09-25\n",
+       "52441    2018-05-25\n",
+       "Name: sale_date, Length: 52222, dtype: object"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Viewing sale_date format\n",
+    "\n",
+    "houses['sale_date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "9c07297b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1483228800000000000\n",
+       "1        1483228800000000000\n",
+       "2        1483228800000000000\n",
+       "3        1483228800000000000\n",
+       "4        1483228800000000000\n",
+       "                ...         \n",
+       "52437    1505865600000000000\n",
+       "52438    1505952000000000000\n",
+       "52439    1505952000000000000\n",
+       "52440    1506297600000000000\n",
+       "52441    1527206400000000000\n",
+       "Name: sale_date, Length: 52222, dtype: int64"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I can now convert it to int64 form which is scalable\n",
+    "\n",
+    "houses['sale_date'] = pd.to_datetime(houses['sale_date']).astype('int64')\n",
+    "houses['sale_date']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "aa8be82a",
    "metadata": {},
@@ -2500,7 +2569,7 @@
     "houses['tax_value'] = houses['tax_value'].astype(int)\n",
     "houses['yearbuilt'] = houses['yearbuilt'].astype(int)\n",
     "houses['fips'] = houses['fips'].astype(int)\n",
-    "\n",
+    "houses['sale_date'] = pd.to_datetime(houses['sale_date']).astype('int64')\n",
     "\n",
     "# Filtering the data through number of bedrooms\n",
     "houses = houses[houses.bathrooms <= 7]"
