adding changes to the wrangle file and scaling exercises

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5feec01a",
+   "id": "2a3af1d6",
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e3cfcd22",
+   "id": "39059acd",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7affeea4",
+   "id": "6dac47b5",
    "metadata": {
     "scrolled": false
    },
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "fc8ad82a",
+   "id": "eebbbf60",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bf21ee61",
+   "id": "3caae1b9",
    "metadata": {
     "scrolled": false
    },
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "cdaa1c96",
+   "id": "a8bd1722",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "07fc1532",
+   "id": "3c10adf8",
    "metadata": {
     "scrolled": false
    },
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "f88f87c6",
+   "id": "d65b1294",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "ac36342e",
+   "id": "2c91e1b2",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "aaa12de8",
+   "id": "d05ad319",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "c5593c41",
+   "id": "0ae1ecd1",
    "metadata": {
     "scrolled": false
    },
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "68ac910f",
+   "id": "4555aae4",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "3d75b5ff",
+   "id": "72ba4f61",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "6630074f",
+   "id": "0bff874f",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "cf610b65",
+   "id": "04771c83",
    "metadata": {
     "collapsed": true
    },
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "8314c1e6",
+   "id": "aad41cd6",
    "metadata": {},
    "outputs": [
     {
@@ -2448,7 +2448,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "9c07297b",
+   "id": "63b00161",
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2474,7 @@
     }
    ],
    "source": [
-    "# I can now convert it to int64 form which is scalable\n",
+    "# I can convert it to int64 form which is scalable\n",
     "\n",
     "houses['sale_date'] = pd.to_datetime(houses['sale_date']).astype('int64')\n",
     "houses['sale_date']"
