--- a/scaling_exercises.ipynb
+++ b/scaling_exercises.ipynb
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3826f486",
+   "id": "8d031758",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c09b254f",
+   "id": "8ed211dc",
    "metadata": {},
    "source": [
     "<font color=“brown”>**Creating a scaled DF and and non-scaled DF for exploration**</font>"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "fea6c16b",
+   "id": "ca522046",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "161074e0",
+   "id": "972a49d8",
    "metadata": {
     "scrolled": false
    },
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee106a36",
+   "id": "e4b5afa9",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3fdd7a2d",
+   "id": "77149512",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e7ca76",
+   "id": "3698dca6",
    "metadata": {},
    "source": [
     "# Scaling"
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "58d0c4eb",
+   "id": "27c950fc",
    "metadata": {
     "collapsed": true
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "42f64cdf",
+   "id": "a260c9c4",
    "metadata": {
     "collapsed": true
    },
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c862beee",
+   "id": "a991e179",
    "metadata": {
     "collapsed": true
    },
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c97a8c9",
+   "id": "ee758618",
    "metadata": {},
    "source": [
     "## Min-Max Scaling"
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "51d8fcf7",
+   "id": "6d60ec2a",
    "metadata": {},
    "outputs": [
     {
@@ -973,24 +973,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "9bffa89b",
+   "execution_count": 46,
+   "id": "d70dd53d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = sklearn.preprocessing.MinMaxScaler()\n",
+    "mm_scaler = sklearn.preprocessing.MinMaxScaler()\n",
     "\n",
-    "scaler.fit(train)\n",
+    "mm_scaler.fit(train)\n",
     "\n",
-    "train_scaled_mm = scaler.transform(train)\n",
-    "validate_scaled_mm = scaler.transform(validate)\n",
-    "test_scaled_mm = scaler.transform(test)"
+    "train_scaled_mm = mm_scaler.transform(train)\n",
+    "validate_scaled_mm = mm_scaler.transform(validate)\n",
+    "test_scaled_mm = mm_scaler.transform(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "9ff0d72c",
+   "execution_count": 47,
+   "id": "fa91a595",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "        0.79310345]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,8 +1022,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "be1ef207",
+   "execution_count": 48,
+   "id": "68e24ffc",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "Text(0.5, 1.0, 'Scaled Min-Max')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afadbac3",
+   "id": "32cbc41f",
    "metadata": {},
    "source": [
     "## Standard scaler"
@@ -1069,24 +1069,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "d67725b5",
+   "execution_count": 49,
+   "id": "3e442a96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = sklearn.preprocessing.StandardScaler()\n",
+    "standard_scaler = sklearn.preprocessing.StandardScaler()\n",
     "\n",
-    "scaler.fit(train)\n",
+    "standard_scaler.fit(train)\n",
     "\n",
-    "train_scaled_standard = scaler.transform(train)\n",
-    "validate_scaled_standard = scaler.transform(validate)\n",
-    "test_scaled_standard = scaler.transform(test)"
+    "train_scaled_standard = standard_scaler.transform(train)\n",
+    "validate_scaled_standard = standard_scaler.transform(validate)\n",
+    "test_scaled_standard = standard_scaler.transform(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "7923e8ea",
+   "execution_count": 50,
+   "id": "94022311",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
        "        -0.57560093,  0.9630447 ]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,8 +1118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "ffc28a0d",
+   "execution_count": 51,
+   "id": "87e8dbe5",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "Text(0.5, 1.0, 'Scaled Standard')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0fdd01",
+   "id": "f1f74017",
    "metadata": {},
    "source": [
     "## Robust scaler"
@@ -1165,24 +1165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "6a36eea5",
+   "execution_count": 52,
+   "id": "494fe0ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = sklearn.preprocessing.RobustScaler()\n",
+    "robust_scaler = sklearn.preprocessing.RobustScaler()\n",
     "\n",
-    "scaler.fit(train)\n",
+    "robust_scaler.fit(train)\n",
     "\n",
-    "train_scaled_robust = scaler.transform(train)\n",
-    "validate_scaled_robust = scaler.transform(validate)\n",
-    "test_scaled_robust = scaler.transform(test)"
+    "train_scaled_robust = robust_scaler.transform(train)\n",
+    "validate_scaled_robust = robust_scaler.transform(validate)\n",
+    "test_scaled_robust = robust_scaler.transform(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "934198bd",
+   "execution_count": 53,
+   "id": "bbe968da",
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "         0.        ,  0.55555556]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,8 +1214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "40e98820",
+   "execution_count": 54,
+   "id": "1c7394f5",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
        "Text(0.5, 1.0, 'Scaled Robust')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1253,22 +1253,136 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98b31b1",
+   "id": "ab0e89fc",
    "metadata": {},
    "source": [
-    "Applying the .inverse_transform to reverse the process"
+    "## Applying the .inverse_transform to reverse the process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "819bc54e",
+   "metadata": {},
+   "source": [
+    "### Min-Max scaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d15a11ee",
+   "execution_count": 59,
+   "id": "e12f633b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.0000000e+00, 3.0000000e+00, 2.8780000e+03, ..., 2.2646300e+03,\n",
+       "        6.0370000e+03, 1.5053472e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.2720000e+03, ..., 3.8774700e+03,\n",
+       "        6.0370000e+03, 1.4972256e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.4720000e+03, ..., 1.5314000e+03,\n",
+       "        6.0590000e+03, 1.4980896e+18],\n",
+       "       ...,\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.2420000e+03, ..., 1.5089800e+03,\n",
+       "        6.0590000e+03, 1.4902272e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.3280000e+03, ..., 6.2905400e+03,\n",
+       "        6.0370000e+03, 1.4967936e+18],\n",
+       "       [4.0000000e+00, 3.0000000e+00, 2.8170000e+03, ..., 6.4769700e+03,\n",
+       "        6.0370000e+03, 1.5011136e+18]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "train.inverse_transform"
+    "reversed_mm_train = mm_scaler.inverse_transform(train_scaled_mm)\n",
+    "reversed_mm_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "449ec364",
+   "metadata": {},
+   "source": [
+    "### Standard scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a06a1503",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.0000000e+00, 3.0000000e+00, 2.8780000e+03, ..., 2.2646300e+03,\n",
+       "        6.0370000e+03, 1.5053472e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.2720000e+03, ..., 3.8774700e+03,\n",
+       "        6.0370000e+03, 1.4972256e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.4720000e+03, ..., 1.5314000e+03,\n",
+       "        6.0590000e+03, 1.4980896e+18],\n",
+       "       ...,\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.2420000e+03, ..., 1.5089800e+03,\n",
+       "        6.0590000e+03, 1.4902272e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.3280000e+03, ..., 6.2905400e+03,\n",
+       "        6.0370000e+03, 1.4967936e+18],\n",
+       "       [4.0000000e+00, 3.0000000e+00, 2.8170000e+03, ..., 6.4769700e+03,\n",
+       "        6.0370000e+03, 1.5011136e+18]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reversed_standard_train = standard_scaler.inverse_transform(train_scaled_standard)\n",
+    "reversed_standard_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7a3db62",
+   "metadata": {},
+   "source": [
+    "### Robust scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "6e06e85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.0000000e+00, 3.0000000e+00, 2.8780000e+03, ..., 2.2646300e+03,\n",
+       "        6.0370000e+03, 1.5053472e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.2720000e+03, ..., 3.8774700e+03,\n",
+       "        6.0370000e+03, 1.4972256e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.4720000e+03, ..., 1.5314000e+03,\n",
+       "        6.0590000e+03, 1.4980896e+18],\n",
+       "       ...,\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.2420000e+03, ..., 1.5089800e+03,\n",
+       "        6.0590000e+03, 1.4902272e+18],\n",
+       "       [3.0000000e+00, 2.0000000e+00, 1.3280000e+03, ..., 6.2905400e+03,\n",
+       "        6.0370000e+03, 1.4967936e+18],\n",
+       "       [4.0000000e+00, 3.0000000e+00, 2.8170000e+03, ..., 6.4769700e+03,\n",
+       "        6.0370000e+03, 1.5011136e+18]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reversed_robust_train = robust_scaler.inverse_transform(train_scaled_robust)\n",
+    "reversed_robust_train"
    ]
   }
  ],
